@@ -4,6 +4,10 @@ This is a history of major changes to {my wmii configuration}[http://people.ucsc
 
 * Added Wmii.get_view and Wmii.get_client methods, to further minimize hard-coded IXP file system paths. This will make it easier to upgrade to wmii-4 later on.
 
+* Fixed ruby-ixp to be internally buffered for Ixp#read.
+  * Event loop now uses Ixp#read instead of *wmiir*.
+    * Already running configurations now correctly exit when another instance starts up.
+
 
 = 2006-09-14
 
